<resources>
    <string name="app_name" translatable="false">Royal Industry</string>
    <string name="server_client_id" translatable="false">1039988370556-volihaa3qsfffm4pjcbhihjb6uitrhle.apps.googleusercontent.com</string>
    <string name="facebook_app_id" translatable="false">803777856424882</string>
    <string name="app_id" translatable="false">1039988370556</string>
    <string name="title_activity_bank">BankActivity</string>
    <string name="Gold">gold </string>
    <string name="Diamonds">diamonds </string>
    <string name="Costs">costs: </string>
    <string name="Create">create </string>
    <string name="Cantafford">not enough gold!</string>
    <string name="Convert"> create dias </string>
    <string name="Close">close</string>
    <string name="confirm_convert">confirm convert</string>
    <string name="architect">architect </string>
    <string name="factory_1">factory 1 </string>
    <string name="factory_2">factory 2 </string>
    <string name="factory_3">factory 3 </string>
    <string name="factory_4">factory 4 </string>
    <string name="bank">bank </string>
    <string name="factories">factories </string>
    <string name="agency">agency </string>


    <string name="level1">level: 1</string>
    <string name="level2">level: 2</string>
    <string name="level3">level: 3</string>
    <string name="level4">level: 4</string>
    <string name="level5">level: 5</string>
    <string name="level6">level: 6</string>
    <string name="level7">level: 7</string>
    <string name="level8">level: 8</string>
    <string name="level9">level: 9</string>
    <string name="level10">level: 10</string>

    <string name="gold_per_hour">gold per hour: </string>
    <string name="storage">storage: </string>

    <string name="waitforupgradefinish">wait until upgrade is finished</string>

    <string name="upgrade">upgrade </string>
    <string name="no">no</string>
    <string name="gold_collected">gold collected: </string>
    <string name="time">time: </string>
    <string name="Bankisfull">your bank storage is full!</string>

    <string name="goldstorage">gold storage: </string>
    <string name="diastorage">diamond storage: </string>

    <string name="zu"> to </string>

    <string name="unlock">unlocks: </string>

    <string name="build">build </string>
    <string name="title_activity_goldconvertad">goldconvertad</string>

    <string name="action_settings">Settings</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="title_activity_gold_to_dias_ad">GoldToDiasAd</string>
    <string name="loading">loading</string>
    <string name="signed_out">signed out!</string>
    <string name="signed_in_fmt">signed in</string>
    <string name="signin_other_error">other error</string>
    <string name="welcome">welcome</string>
    <string name="facproduce">factories produce gold for you</string>
    <string name="collect">collect your first gold:</string>
    <string name="goldcollectedtutorial">gold collected!</string>
    <string name="banktutorial">your gold is now in the bank.</string>
    <string name="insidebank">inside the bank, you can create real money</string>
    <string name="insidearch">inside the architect\'s office, you can upgrade your buildings.</string>
    <string name="tutcomplete">you completed the tutorial. have fun!</string>
    <string name="checkinet">check your internet connection</string>
    <string name="agencybenefits">inside agency you can purchase:\n\nboosts and other stuff</string>
    <string name="doublegold">double gold</string>
    <string name="doublegoldtext">double your gold for the next collect\n\ncosts: 2 diamonds</string>
    <string name="doublerbought">you have already bought one!</string>
    <string name="pubkey" translatable="false">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAoNjbHpeLPvZRDSqTiHDyr+IzP0SRMAwPmPPF0a4I+peov04SxzWKMhOJwM0lWlMq2GHBqlD6ZgwmI/7MpdVtWAz5zJrUeA91C0YE3/2zOpj2V15amZmmefrUt3N2rawkBFdGMcb9pnBh44J9tyXdQsLl+NMRdYAsMldLeTT5p8i+nkxkxwOgYl8Ndbt3UUwUsTLgnvvnW9ZBWOAbi8UJreTD+JdzF6ik/dLrnV+/FeVsJz0TsemV1eg4aa+CXJJ8uPdneOuesTJkQ9xmA2N44IuUuMcVz8vEsw6kiqgprIVa+tYgN6xXeSK+io1tISJi7pi2QBj1HR+ng2KbtN3liQIDAQAB</string>
    <string name="doublegoldcollect">double gold collected:</string>
    <string name="hangartutext">while waiting\n\n you can play a minigame\n\n to earn some extra gold</string>
    <string name="title_activity_test">Test</string>
    <string name="freedias">for each person who starts\n\n playing with that link\n\n you and him receive 20 dias</string>
    <string name="freediastitle">20 free dias:</string>
    <string name="share_link">share link</string>
    <string name="free_gold">free gold</string>
    <string name="buy">buy</string>
    <string name="skiptime">skip 30 minutes building time</string>
    <string name="choosebui">choose a building</string>
    <string name="noupatmom">no upgrades going on</string>
    <string name="pay_with">pay with:</string>
    <string name="not_enough_diamonds">not enough diamonds!</string>
    <string name="click_on_ad">click on it to continue!</string>
    <string name="gotit">got it! </string>
    <string name="hintad">short hint: </string>
    <string name="hintexpad">if you just\n\n 2,3 times click on the ads,\n\n you can help\n\n keep the project going!</string>
    <string name="thx">thank you for watching the ad</string>
    <string name="congratulation">CONGRATULATION</string>
    <string name="teilen">SHARE</string>
    <string name="dollar_text_dialog">YOU REACHED A DOLLAR! \n SHARE THIS MOMENT \n AND GET 20 FREE DIAS\n FOR EVERY NEW PERSON STARTS PLAYING</string>
    <string name="another_dollar">hey!\nI just made another dollar with this game!\n get 20 free diamonds with my link: \n </string>
    <string name="de50c_text">hey!\nI just made another 10 cents with this game!\n get 20 free diamonds with my link: \n</string>
    <string name="yu_get_richer">YOU ARE GETTING RICHER! \n SHARE THIS MOMENT \n AND GET 20 FREE DIAS\n FOR EVERY NEW PERSON STARTS PLAYING</string>
    <string name="getfreedias">GET FREE DIAMONDS IMMEDIATELY!</string>
    <string name="tireddias">TIRED OF WAITING?</string>
    <string name="to">to</string>
    <string name="present_4_you_lt_3"><![CDATA[present 4 you <3]]></string>


</resources>
