<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fullscreen_content"
    android:background="#000000">


    <ImageView
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:id="@+id/imageView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/closefreedias"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/closebtns" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/freediastitle"
        android:id="@+id/freediastitle"
        android:layout_alignTop="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/freedias"
        android:id="@+id/textView5"
        android:gravity="center_horizontal"
        android:layout_below="@+id/link20dias"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/sharefreedias"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:id="@+id/link20dias"
        android:singleLine="true"
        android:layout_below="@+id/freediastitle"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_link"
        android:id="@+id/sharefreedias"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:textColor="#ffffff" />


</RelativeLayout>



